tests/function/never_closing_paren.rev
fn fib(a, b // error: parenthesis is never closed